2015-06-03  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-arm.c (arm_archs): Add "armv8.1-a".
	* doc/c-arm.texi (ARM Options, -march): Add "armv8.1-a".
	* NEWS: Mention ARMv8.1 support.

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-arm.c (arm_ext_pan): New.
	(do_setpan): New, encode an ARM SETPAN instruction.
	(do_t_setpan): New, encode a Thumb SETPAN instruction.
	(insns): Add "setpan".
	(arm_extensions): Add "pan".
	* doc/c-arm.texi (ARM Options): Add "pan" to list of -mcpu processor
	extensions.

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-aarch64.c (aarch64_features): Add "rdma".
	* doc/c-aarch64.texi (AArch64 Extensions): Add "rdma".

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-aarch64.c (aarch64_features): Add "lor".
	* doc/c-aarch64.c (Aarch64 Extensions): Add "lor" to list of
	architecture extensions.

2015-06-01  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-aarch64.c (parse_sys_reg): New parameter.  Check target
	support.  Fix whitespace.
	(parse_operands): Update for parse_sys_reg changes.
	(aarch64_features): Add "pan".
	* doc/c-aarch64.texi (Aarch64 Extensions): Add "pan".

2015-02-03  Renlin Li  <renlin.li@arm.com>

	* doc/c-aarch64.texi (.arch): Document the directive.
	(.arch_extension): Likewise.

2014-11-18  Jan Beulich  <jbeulich@suse.com>

	* config/tc-aarch64.c (s_aarch64_arch_extension): New.
	(md_pseudo_table): Add arch_extension.
	(aarch64_parse_features): New parameter "ext_only". Handle it.
	(aarch64_parse_cpu, aarch64_parse_arch, s_aarch64_cpu,
	s_aarch64_arch): Pass FALSE as new third argument of
	aarch64_parse_features().

2015-01-07  Jan Beulich <jbeulich@suse.com>

	* config/tc-arm.c (struct arm_option_extension_value_table):
	Split field "value" into fields "merge_value" and "clear_value".
	(arm_extensions): Adjust initializer accordingly.

2015-06-17  Nicolas Pitre <nico@linaro.org>

	* as.c (show_usage): Document --sectname-subst.